--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+}
+.btn-green {
+    background-color: #469165;
+    color: #ffffff;
+    font-size: 16px;
+    font-family: 600;
+    border: none;
+    border-radius: 4px;
+    padding: 12.5px 16px;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 120px;
+}
+nav img {
+    margin-top: 16px;
+}
+.nav-content ul {
+    display: flex;
+    gap: 32px;
+    list-style: none;
+}
+.nav-content ul li a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 16px;
+    font-weight: 500;
+}
