--- a/style.css
+++ b/style.css
@@ -273,13 +273,12 @@ footer hr {
     font-family: 600;
     border: none;
     border-radius: 4px;
-    /* padding: 16.5px 16px 16.5px 16px; */
     padding: 12px 16px;
 }
 .btn-green:hover, .btn-white:hover {
     cursor: pointer;
     opacity: 0.8;
-    /* IDEA: must do this letter */
+    box-shadow: 0 6px 15px rgba(0,0,0,0.25);
 }
 #header-banner .btn-green {
     padding: 16.5px 0 16.5px 16px;
